...
                                painter =
                                    painterResource(
                                        R.drawable
                                            .ic_ms_font_download_rounded
                                    ),
                                contentDescription =
                                    "Fontes"
                            )
                        },
                        label = {
                            Text("Fontes")
                        },
                        colors =
...
                                painter =
                                    painterResource(
                                        R.drawable
                                            .ic_ms_account_circle_rounded
                                    ),
                                contentDescription =
                                    "Conta"
                            )
                        },
                        label = {
                            Text("Conta")
                        },
                        colors =
...
